--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -25,7 +25,7 @@
       <tr>
         <td><%= student.first_name %></td>
         <td><%= student.last_name %></td>
-        <td><%= student.image %></td>
+        <td><%= image_tag student.avatar ,:style =>  'width:20px;height:20px;'%></td>
         <td><%= student.score %></td>
         <td><%= student.class_name %></td>
         <td><%= student.class_number %></td>
