--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -35,6 +35,10 @@
       <%= f.label :class_number %><br>
       <%= f.number_field :class_number %>
     </div>
+    <div class="field">
+      <%= f.label :year %><br>
+      <%= f.text_field :year %>
+    </div>
     <div class="actions">
       <%= f.submit %>
     </div>
