--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+@font-face {
+    font-family: 'BYekan';
+    src: url("BYekan.eot");
+    src: url('BYekan.eot?#iefix') format('embedded-opentype'),
+    url('BYekan.woff') format('woff'),
+    url('BYekan.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body{
+    background-color: #f5f5f5;
+    margin-top: 70px;
+}
