--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,60 +1,47 @@
-<p id="notice"><%= notice %></p>
-<%= current_admin %>
-<% if admin_signed_in?%>
-    <%= link_to 'SignOut', destroy_admin_session_path,:method => :delete %>
-<% else %>
-    <%= link_to 'SignIn', new_admin_session_path,:method => :post %>
-<% end %>
-<h1>Listing Students</h1>
+<div class="ui fluid green card">
+  <div class="right ui rail">
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Image</th>
-      <th>Score</th>
-      <th>Class name</th>
-      <th>Class number</th>
-      <th>num of projects</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <div class="ui segment attached" style="text-align: left">
+      <div class="ui selection dropdown fluid">
+        <input name="gender" type="hidden">
+        <div class="default text">سال تحصیل</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item" data-value="0">Value</div>
+          <div class="item" data-value="1">Another Value</div>
+        </div>
+      </div>
+    </div>
+    <div class="ui green button attached bottom">
+      جستجو
+    </div>
+  </div>
+  <div class="content">
+    <div class="header">
+      دانش آموزان
+    </div>
+  </div>
+  <div class="content">
+    <p>
+      در این صفحه شما می توانید لیست تمام دانش آموزان را مشاهده کنید همچنین می توانید با استفاده از تنظیمات منوی سمت راست سال تحصیل را نیز انتخاب کنید
+    </p>
+  </div>
+</div>
 
-  <tbody>
-    <% @students.each do |student| %>
-      <tr>
-        <td><%= student.first_name %></td>
-        <td><%= student.last_name %></td>
-        <td><%= image_tag student.avatar ,:style =>  'width:20px;height:20px;'%></td>
-        <td><%= student.score %></td>
-        <td><%= student.class_name %></td>
-        <td><%= student.class_number %></td>
-        <td><%= student.projects.count %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="ui three link cards" id="cardlist">
 
+  <% @students.each do |student| %>
+      <%= render 'students/student_card', :student => student %>
+  <% end %>
+</div>
 
-
-<h2>Import Students</h2>
-<%= form_tag import_students_path, multipart: true do %>
-    <%= file_field_tag :file %>
-    <%= submit_tag "Import" %>
-<% end %>
-
-<h2>Import Projects</h2>
-<%= form_tag import_projects_path, multipart: true do %>
-    <%= file_field_tag :file %>
-    <%= submit_tag "Import" %>
-<% end %>
-
-
-
-<br>
-
-<%= link_to 'New Student', new_student_path %>
+<script>
+    $(document).ready(function(){
+        $('.ui.dropdown')
+                .dropdown()
+        ;
+    });
+</script>
+<!--< %= link_to 'Show', student %>-->
+<!--< %= link_to 'Edit', edit_student_path(student) %>-->
+<!--< %= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %>-->
