--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,10 @@
       <i class="users  icon"></i>
       دانش آموزان
   <% end %>
+  <!--<%= link_to '#',:class => 'item' do %>-->
+      <!--<i class="travel icon"></i>-->
+      <!--معلمین-->
+  <!--<% end %>-->
   <% unless admin_signed_in? %>
       <%= link_to new_admin_session_path ,:class => 'item' do %>
           <i class="sign in icon"></i>
