--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Projects</h1>
-
-<table>
+<table class="ui very basic collapsing celled table">
   <thead>
     <tr>
       <th>Population</th>
