--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 
-    <div class=" ui card fluid">
+    <div class=" ui green card fluid">
       <div class="content">
         <div class="header">
           کلاس شهرسازی سوم دبستان
@@ -31,7 +31,7 @@
           برترین ها
         </div>
       </div>
-      <div class="ui secondary segment">
+      <div class="ui green secondary segment">
         <div class="ui three link cards">
           <% @students.each do |student| %>
               <%= render 'students/student_card', :student => student %>
