--- a/app/views/medals/_form.html.erb
+++ b/app/views/medals/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@medal) do |f| %>
+<%= form_for(@medal,:html => {:class => 'ui form'}) do |f| %>
     <% if @medal.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@medal.errors.count, "error") %> prohibited this medal from being saved:</h2>
@@ -12,30 +12,47 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :name %><br>
+      <%= f.label :name %>
       <%= f.text_field :name %>
     </div>
     <div class="field">
-      <%= f.label :display_name %><br>
+      <%= f.label :display_name %>
       <%= f.text_field :display_name %>
     </div>
     <div class="field">
-      <%= f.label :description %><br>
+      <%= f.label :description %>
       <%= f.text_field :description %>
     </div>
     <div class="field">
-      <%= f.label :type_name %><br>
+      <%= f.label :type_name %>
       <%= f.text_field :type_name %>
     </div>
     <div class="field">
-      <%= f.label :score %><br>
+      <%= f.label :score %>
       <%= f.number_field :score %>
     </div>
     <div class="field">
-      <%= f.label :image %><br>
-      <%= f.file_field :image %>
+      <%= f.label :image %>
+      <label for='file' class='ui right labeled icon button'>
+        <i class="file icon"></i>
+        Browse ...
+      </label>
+      <%= f.file_field :image ,:style =>'display:none;' ,:id =>'file'%>
     </div>
-    <div class="actions">
-      <%= f.submit %>
-    </div>
+    <%= f.submit 'تایید' ,:class => 'ui button green button' %>
+
 <% end %>
+<div class="hidden ui icon warning message " id="mes">
+  <i class=" file image outline icon"></i>
+  <div class="content">
+    <p id="namefile" ></p>
+  </div>
+</div>
+<script>
+    $('#file').change(function() {
+        var str;
+        str = $(this).val();
+        $('#namefile').text(str);
+        $('#mes').removeClass("hidden");
+    });
+</script>
