--- a/app/views/medals/new.html.erb
+++ b/app/views/medals/new.html.erb
@@ -1,24 +1,18 @@
-<h1>New Medal</h1>
+<div class="ui green segment">
+  <%= render 'form' %>
+</div>
+<!--<hr>-->
 
-<%= render 'form' %>
+<!--<h2>Import Students</h2>-->
+<!--<%= form_tag import_students_path, multipart: true do %>-->
+    <!--<%= file_field_tag :file %>-->
+    <!--<%= submit_tag "Import" %>-->
+<!--<% end %>-->
 
-
-<hr>
-
-<h2>Import Students</h2>
-<%= form_tag import_students_path, multipart: true do %>
-    <%= file_field_tag :file %>
-    <%= submit_tag "Import" %>
-    <% end %>
-
-<h2>Import Projects</h2>
-<%= form_tag import_projects_path, multipart: true do %>
-    <%= file_field_tag :file %>
-    <%= submit_tag "Import" %>
-    <% end %>
+<!--<h2>Import Projects</h2>-->
+<!--<%= form_tag import_projects_path, multipart: true do %>-->
+    <!--<%= file_field_tag :file %>-->
+    <!--<%= submit_tag "Import" %>-->
+<!--<% end %>-->
 
 
-
-
-
-<%= link_to 'Back', medals_path %>
