--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@student) do |f| %>
+<%= form_for(@student ,:html => {:class => 'ui form'}) do |f| %>
     <% if @student.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@student.errors.count, "error") %> prohibited this student from being saved:</h2>
@@ -10,36 +10,52 @@
           </ul>
         </div>
     <% end %>
-
     <div class="field">
-      <%= f.label :first_name %><br>
-      <%= f.text_field :first_name %>
+      <label>نام</label>
+      <%= f.text_field :first_name%>
     </div>
     <div class="field">
-      <%= f.label :last_name %><br>
-      <%= f.text_field :last_name %>
+      <label>نام خانوادگی</label>
+      <%= f.text_field :last_name%>
     </div>
     <div class="field">
-      <%= f.label :avatar %><br>
-      <%= f.file_field :avatar %>
+      <label>عکس دانش آموز</label>
+      <label for='file' class='ui right labeled icon button'>
+        <i class="file icon"></i>
+        Browse ...
+      </label>
+      <%= f.file_field :avatar ,:style =>'display:none;' ,:id =>'file'%>
     </div>
     <div class="field">
-      <%= f.label :score %><br>
+      <label>امتیاز</label>
       <%= f.number_field :score %>
     </div>
     <div class="field">
-      <%= f.label :class_name %><br>
+      <label>کلاس</label>
       <%= f.text_field :class_name %>
     </div>
     <div class="field">
-      <%= f.label :class_number %><br>
+      <label>شماره‌ی لیست</label>
       <%= f.number_field :class_number %>
     </div>
     <div class="field">
-      <%= f.label :year %><br>
+      <label>سال تحصیل</label>
       <%= f.text_field :year %>
     </div>
-    <div class="actions">
-      <%= f.submit %>
-    </div>
+
+    <%= f.submit 'تایید' ,:class => 'ui button green button' %>
 <% end %>
+<div class="hidden ui icon warning message " id="mes">
+  <i class=" file image outline icon"></i>
+  <div class="content">
+    <p id="namefile" ></p>
+  </div>
+</div>
+<script>
+    $('#file').change(function() {
+        var str;
+        str = $(this).val();
+        $('#namefile').text(str);
+        $('#mes').removeClass("hidden");
+    });
+</script>
