--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,7 +3,7 @@
 
     <div class="ui segment attached" style="text-align: left">
       <div class="ui selection dropdown fluid">
-        <input name="gender" type="hidden">
+        <input name="year" type="hidden">
         <div class="default text">سال تحصیل</div>
         <i class="dropdown icon"></i>
         <div class="menu">
@@ -11,10 +11,29 @@
           <div class="item" data-value="1">Another Value</div>
         </div>
       </div>
+
+      <div class="ui form" style="text-align: right">
+        <div class="grouped fields">
+          <div class="field">
+            <div class="ui slider checkbox">
+              <input name="throughput" checked="checked" type="radio">
+              <label>کلاس الف</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui slider checkbox">
+              <input name="throughput" type="radio">
+              <label>کلاس ب</label>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <div class="ui green button attached bottom">
       جستجو
     </div>
+
   </div>
   <div class="content">
     <div class="header">
@@ -40,6 +59,12 @@
         $('.ui.dropdown')
                 .dropdown()
         ;
+    });
+
+    $(document).ready(function() {
+        $('.special.card .image').dimmer({
+            on: 'hover'
+        });
     });
 </script>
 <!--< %= link_to 'Show', student %>-->
