--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Student</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', students_path %>
+<div class="ui green segment">
+  <%= render 'form' %>
+</div>
