--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,34 +1,65 @@
-<table class="ui very basic collapsing celled table">
+<div class="ui fluid green card">
+  <div class="content">
+    <div class="header">
+      لیست تمام پروژه های
+      <%= link_to @student.first_name + ' '+ @student.last_name ,student_path(@student)%>
+    </div>
+  </div>
+
+  <div class="content">
+    <p>
+      در این صفحه شما می توانید تمام پروژه هایی که برای شما به عنوان معیار مدال دهی ثبت شده است را به صورت کامل مشاهده کنید<br>
+      برای مشاهده ی کامل اطلاعات پروژه از کلید مشاهده استفاده نمایید
+    </p>
+  </div>
+</div>
+
+<table class="ui celled green attached striped table" >
   <thead>
-    <tr>
-      <th>Population</th>
-      <th>Cash flow</th>
-      <th>Income</th>
-      <th>Money</th>
-      <th>Satis people 1</th>
-      <th>Satis work 1</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th></th>
+    <th>درآمد زایی</th>
+    <th>درآمد کل</th>
+    <th>پول کل</th>
+    <th>جمعیت کل</th>
+    <th>ردیف</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @projects.each do |project| %>
+  <% @projects.each do |project| %>
       <tr>
-        <td><%= project.population %></td>
+        <!--<td></td>-->
+        <td>
+          <div class="ui icon buttons">
+            <% if admin_signed_in? %>
+                <%= link_to  student_project_path(project.student,project) ,:class => 'ui button' do%>
+                    <i class="bar chart icon"></i>
+                <% end %>
+                <%= link_to  edit_student_project_path(project.student,project),:class => "ui  button" do%>
+                    <i class="edit icon"></i>
+                <% end %>
+                <%= link_to  student_project_path(project.student,project), method: :delete, data: { confirm: 'Are you sure?' } ,:class => "ui red button" do%>
+                    <i class="trash icon"></i>
+                <% end %>
+            <% else %>
+                <%= link_to  student_project_path(project.student,project) ,:class => 'ui labeled icon button' do%>
+                    <i class="bar chart green  icon"></i>
+                    مشاهده
+                <% end %>
+            <% end %>
+          </div>
+        </td>
         <td><%= project.cash_flow %></td>
         <td><%= project.income %></td>
         <td><%= project.money %></td>
-        <td><%= project.satis_people_1 %></td>
-        <td><%= project.satis_work_1 %></td>
-        <td><%= link_to 'Show', student_project_path(project.student,project) %></td>
-        <td><%= link_to 'Edit', edit_student_project_path(project.student,project) %></td>
-        <td><%= link_to 'Destroy', student_project_path(project.student,project), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= project.population %></td>
+        <td><%=  @counter+=1 %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Project', new_student_project_path %>
-<%= link_to 'back', student_path(@student) %>
+<% if admin_signed_in? %>
+    <%= link_to 'پروژه جدید', new_student_project_path ,:class => 'ui green button bottom attached'%>
+<% end %>
