--- a/app/views/students/_student_card.html.erb
+++ b/app/views/students/_student_card.html.erb
@@ -18,13 +18,17 @@
         </div>
       </div>
     </div>
-    <%= image_tag student.avatar %>
+    <% if student.avatar.nil? %>
+        <%= image_tag ('user_placeholder.png') %>
+    <%else%>
+        <%= image_tag student.avatar %>
+    <% end %>
   </div>
   <div class="ui content">
     <div class="ui header">
       <%= student.first_name + ' '+student.last_name %>
     </div>
-    </div>
+  </div>
   <div class="content">
     <div class="ui meta">
       <%= 'کلاس: ' + student.class_name%>
