--- a/app/views/welcome/upload.html.erb
+++ b/app/views/welcome/upload.html.erb
@@ -7,7 +7,7 @@
                        :class =>'ui selection  compact dropdown') %>
         <%= button_tag  type: 'submit',:class => 'ui green button labeled icon  ' do %>
             <i class="download icon"></i>
-            دانلود لیست دانش آموزان
+            دریافت لیست دانش آموزان
         <% end %>
       </div>
   <% end %>
