--- a/app/views/medals/edit.html.erb
+++ b/app/views/medals/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Medal</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @medal %> |
-<%= link_to 'Back', medals_path %>
+<div class="ui green segment">
+  <%= render 'form' %>
+</div>
