--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
   <% end %>
 </div>
 
-<div class="ui grid container centered">
+<div class="ui grid container stackable centered">
   <div class="eight wide column">
     <%= yield %>
   </div>
